--- a/.gitignore
+++ b/.gitignore
@@ -1724,3 +1724,102 @@ saves/Univ00/saves.json
 main.html
 saves/Univ00/saves.json
 main.html
+saves/Univ00/1300.0.json
+saves/Univ00/saves.json
+saves/Univ06/100.0.json
+saves/Univ06/200.0.json
+saves/Univ06/300.0.json
+saves/Univ06/400.0.json
+saves/Univ06/500.0.json
+saves/Univ06/600.0.json
+saves/Univ06/700.0.json
+saves/Univ06/800.0.json
+saves/Univ06/900.0.json
+saves/Univ06/1000.0.json
+saves/Univ06/1100.0.json
+saves/Univ06/1200.0.json
+saves/Univ06/1300.0.json
+saves/Univ06/1400.0.json
+saves/Univ06/1500.0.json
+saves/Univ06/1600.0.json
+saves/Univ06/1700.0.json
+saves/Univ06/1800.0.json
+saves/Univ06/1900.0.json
+saves/Univ06/2000.0.json
+saves/Univ06/2100.0.json
+saves/Univ06/2200.0.json
+saves/Univ06/2300.0.json
+saves/Univ06/2400.0.json
+saves/Univ06/2500.0.json
+saves/Univ06/2600.0.json
+saves/Univ06/2700.0.json
+saves/Univ06/2800.0.json
+saves/Univ06/2900.0.json
+saves/Univ06/3000.0.json
+saves/Univ06/saves.json
+saves/Univ14/100.0.json
+saves/Univ14/200.0.json
+saves/Univ14/300.0.json
+saves/Univ14/400.0.json
+saves/Univ14/500.0.json
+saves/Univ14/600.0.json
+saves/Univ14/700.0.json
+saves/Univ14/800.0.json
+saves/Univ14/900.0.json
+saves/Univ14/1000.0.json
+saves/Univ14/1100.0.json
+saves/Univ14/1200.0.json
+saves/Univ14/1300.0.json
+saves/Univ14/1400.0.json
+saves/Univ14/1500.0.json
+saves/Univ14/1600.0.json
+saves/Univ14/1700.0.json
+saves/Univ14/1800.0.json
+saves/Univ14/1900.0.json
+saves/Univ14/2000.0.json
+saves/Univ14/2100.0.json
+saves/Univ14/2200.0.json
+saves/Univ14/2300.0.json
+saves/Univ14/2400.0.json
+saves/Univ14/2500.0.json
+saves/Univ14/2565.7.json
+saves/Univ14/saves.json
+saves/Univ14/100.0.json
+saves/Univ14/200.0.json
+saves/Univ14/300.0.json
+saves/Univ14/400.0.json
+saves/Univ14/500.0.json
+saves/Univ14/600.0.json
+saves/Univ14/700.0.json
+saves/Univ14/800.0.json
+saves/Univ14/900.0.json
+saves/Univ14/1000.0.json
+saves/Univ14/1100.0.json
+saves/Univ14/1200.0.json
+saves/Univ14/1300.0.json
+saves/Univ14/1400.0.json
+saves/Univ14/1500.0.json
+saves/Univ14/1600.0.json
+saves/Univ14/1700.0.json
+saves/Univ14/1800.0.json
+saves/Univ14/1900.0.json
+saves/Univ14/2000.0.json
+saves/Univ14/2100.0.json
+saves/Univ14/2200.0.json
+saves/Univ14/2300.0.json
+saves/Univ14/2400.0.json
+saves/Univ14/2500.0.json
+saves/Univ14/2565.7.json
+saves/Univ14/saves.json
+saves/Univ12/4263.0.json
+saves/Univ12/4363.0.json
+saves/Univ12/4463.0.json
+saves/Univ12/4529.7.json
+saves/Univ12/saves.json
+saves/Univ12/4263.0.json
+saves/Univ12/4363.0.json
+saves/Univ12/4463.0.json
+saves/Univ12/4529.7.json
+saves/Univ12/saves.json
+saves/Univ12/saves.json
+saves/Univ12/saves.json
