--- a/config.json
+++ b/config.json
@@ -1,24 +1,24 @@
 {
-  "WORLD": [1800, 900],
+  "WORLD": [2700, 1350],
   "SCREEN": [1800, 900],
   "FONT_SIZE": 14,
 
   
   "PLANT_MIN_NUM": 5,
-  "PLANT_INIT_NUM": 60,
-  "PLANT_MULTIPLY": 0.2,
-  "PLANT_MAX_SIZE": 11,
-  "PLANT_GROWTH": 12,
-  "PLANT_LIFE": 500,
+  "PLANT_INIT_NUM": 80,
+  "PLANT_MULTIPLY": 0.3,
+  "PLANT_MAX_SIZE": 12,
+  "PLANT_GROWTH": 13,
+  "PLANT_LIFE": 600,
   "PLANT_RANGE": 250,
 
-  "CREATURE_MIN_NUM": 18,
+  "CREATURE_MIN_NUM": 12,
   "CREATURE_INIT_NUM": 100,
-  "CREATURE_MULTIPLY": 0.0003,
-  "CREATURE_MIN_SIZE": 3,
-  "CREATURE_MAX_SIZE": 10,
+  "CREATURE_MULTIPLY": 0.0002,
+  "CREATURE_MIN_SIZE": 2,
+  "CREATURE_MAX_SIZE": 11,
 
-  "EAT": 20,
+  "EAT": 25,
   "HIT": 300,
   "SPEED": 3,
   "TURN": 1.2,
@@ -29,16 +29,16 @@
   "MUTATIONS": 0.8,
   "LINKS_RATE": 0.3,
   
-  "BASE_ENERGY": 0.0025,
-  "MOVE_ENERGY": 0.000001,
+  "BASE_ENERGY": 0.003,
+  "MOVE_ENERGY": 0.0000015,
   "SIZE2ENG": 200,
-  "SIZE_COST": 250,
+  "SIZE_COST": 280,
   "ATK_ENG": 0.4,
   "EAT_ENG": 0.1,
   "VEGE2ENG": 1.5,
-  "MEAT2ENG": 3.5,
-  "RUN_COST": 9,
-  "RUN_TIME": 6,
+  "MEAT2ENG": 3.0,
+  "RUN_COST": 16,
+  "RUN_TIME": 8,
 
   "REP_TIME": 120,
   "REP_ENERGY": 0.3,
@@ -61,7 +61,7 @@
   "RANK_SIZE": 35,
   "RANK_DECAY": 0.6,
   "AUTO_SAVE_TIME": 100,
-  "STAT_PERIOD": 50,
+  "STAT_PERIOD": 25,
   "TIME": 1,
   
   "ROCK_NUM": 0,
