--- a/saves/projects.json
+++ b/saves/projects.json
@@ -1,1 +1,1 @@
-{"projects": ["NewUniv03", "NewUniv04", "Univ00", "Univ01", "Univ02", "Univ03", "Univ05", "Univ06", "U", "Univ11", "Univ12"]}
+{"projects": ["Univ12", "Univ14"]}
