--- a/.gitignore
+++ b/.gitignore
@@ -1823,3 +1823,29 @@ saves/Univ12/4529.7.json
 saves/Univ12/saves.json
 saves/Univ12/saves.json
 saves/Univ12/saves.json
+lib/__pycache__/camera.cpython-39.pyc
+lib/__pycache__/statistics.cpython-39.pyc
+lib/__pycache__/camera.cpython-39.pyc
+lib/__pycache__/statistics.cpython-39.pyc
+lib/__pycache__/statistics.cpython-39.pyc
+lib/__pycache__/camera.cpython-39.pyc
+lib/__pycache__/camera.cpython-39.pyc
+lib/__pycache__/statistics.cpython-39.pyc
+saves/Univ40/106.5.json
+saves/Univ40/163.5.json
+saves/Univ40/663.0.json
+saves/Univ40/1163.0.json
+saves/Univ40/1663.0.json
+saves/Univ40/2163.0.json
+saves/Univ40/2663.0.json
+saves/Univ40/3163.0.json
+saves/Univ40/3663.0.json
+saves/Univ40/4163.0.json
+saves/Univ40/saves.json
+saves/Univ38/29.2.json
+saves/Univ38/saves.json
+saves/Univ37/928.4.json
+saves/Univ37/saves.json
+saves/Univ37/saves.json
+saves/Univ37/saves.json
+saves/Univ37/saves.json
