--- a/saves/projects.json
+++ b/saves/projects.json
@@ -1,1 +1,1 @@
-{"projects": ["Univ32", "Univ33", "Univ34", "Univ35", "Univ37", "Univ38", "Univ40"]}
+{"projects": ["Univ32", "Univ33", "Univ34", "Univ35", "Univ37", "Univ38", "Univ40", "Univ50"]}
