--- a/.gitignore
+++ b/.gitignore
@@ -1849,3 +1849,7 @@ saves/Univ37/saves.json
 saves/Univ37/saves.json
 saves/Univ37/saves.json
 saves/Univ37/saves.json
+lib/__pycache__/camera.cpython-39.pyc
+lib/__pycache__/statistics.cpython-39.pyc
+lib/__pycache__/camera.cpython-39.pyc
+lib/__pycache__/statistics.cpython-39.pyc
