--- a/config.json
+++ b/config.json
@@ -1,23 +1,23 @@
 {
-  "WORLD": [1800, 900],
-  "SCREEN": [1800, 900],
+  "WORLD": [1800, 950],
+  "SCREEN": [1800, 950],
   "FONT_SIZE": 14,
 
   
   "PLANT_MIN_NUM": 5,
-  "PLANT_MAX_NUM": 40,
-  "PLANT_INIT_NUM": 20,
+  "PLANT_MAX_NUM": 45,
+  "PLANT_INIT_NUM": 18,
   "PLANT_MULTIPLY": 0.3,
   "PLANT_MAX_SIZE": 11,
   "PLANT_GROWTH": 9,
   "PLANT_LIFE": 500,
   "PLANT_RANGE": 250,
 
-  "CREATURE_MIN_NUM": 15,
+  "CREATURE_MIN_NUM": 14,
   "CREATURE_INIT_NUM": 40,
   "CREATURE_MULTIPLY": 0.0005,
-  "CREATURE_MIN_SIZE": 3,
-  "CREATURE_MAX_SIZE": 10,
+  "CREATURE_MIN_SIZE": 5,
+  "CREATURE_MAX_SIZE": 12,
 
   "EAT": 25,
   "HIT": 300,
@@ -25,15 +25,15 @@
   "TURN": 1,
   "SENSOR_SPEED": 0.3,
   "SENSOR_MAX_ANGLE": 3.4,
-  "SENSOR_RANGE": 250,
+  "SENSOR_RANGE": 300,
   "POWER_COST": 0.0004,
-  "MUTATIONS": 1,
-  "LINKS_RATE": 0.1,
+  "MUTATIONS": 2,
+  "LINKS_RATE": 0.16,
   
-  "BASE_ENERGY": 0.003,
-  "MOVE_ENERGY": 0.0000015,
+  "BASE_ENERGY": 0.005,
+  "MOVE_ENERGY": 0.000005,
   "SIZE2ENG": 200,
-  "SIZE_COST": 280,
+  "SIZE_COST": 300,
   "ATK_ENG": 0.4,
   "EAT_ENG": 0.1,
   "VEGE2ENG": 4,
@@ -45,7 +45,7 @@
   "REP_ENERGY": 0.3,
   "CHILDS_NUM": 1,
   "MEM_TIME": 0.25,
-  "MEAT_TIME": 360,
+  "MEAT_TIME": 240,
   "DIET_MOD": 0.005,
   
   "DIFF": 0.4,
@@ -59,10 +59,10 @@
   
   "MIN_CARNIVORES": 2,
   "MIN_HERBIVORES": 4,
-  "RANK_SIZE": 20,
+  "RANK_SIZE": 30,
   "RANK_DECAY": 0.5,
-  "AUTO_SAVE_TIME": 500,
-  "STAT_PERIOD": 50,
+  "AUTO_SAVE_TIME": 100,
+  "STAT_PERIOD": 100,
   "TIME": 1,
   
   "ROCK_NUM": 0,
