--- a/config.json
+++ b/config.json
@@ -1,21 +1,21 @@
 {
-  "WORLD": [1800, 950],
+  "WORLD": [2700, 1425],
   "SCREEN": [1800, 950],
   "FONT_SIZE": 14,
 
   
-  "PLANT_MIN_NUM": 5,
-  "PLANT_MAX_NUM": 45,
-  "PLANT_INIT_NUM": 18,
+  "PLANT_MIN_NUM": 8,
+  "PLANT_MAX_NUM": 100,
+  "PLANT_INIT_NUM": 40,
   "PLANT_MULTIPLY": 0.3,
   "PLANT_MAX_SIZE": 11,
-  "PLANT_GROWTH": 9,
-  "PLANT_LIFE": 500,
+  "PLANT_GROWTH": 12,
+  "PLANT_LIFE": 550,
   "PLANT_RANGE": 250,
 
-  "CREATURE_MIN_NUM": 14,
-  "CREATURE_INIT_NUM": 40,
-  "CREATURE_MULTIPLY": 0.0005,
+  "CREATURE_MIN_NUM": 24,
+  "CREATURE_INIT_NUM": 100,
+  "CREATURE_MULTIPLY": 0.0002,
   "CREATURE_MIN_SIZE": 5,
   "CREATURE_MAX_SIZE": 12,
 
@@ -24,29 +24,29 @@
   "SPEED": 2,
   "TURN": 1,
   "SENSOR_SPEED": 0.3,
-  "SENSOR_MAX_ANGLE": 3.4,
-  "SENSOR_RANGE": 300,
+  "SENSOR_MAX_ANGLE": 2.4,
+  "SENSOR_RANGE": 400,
   "POWER_COST": 0.0004,
-  "MUTATIONS": 2,
-  "LINKS_RATE": 0.16,
+  "MUTATIONS": 1,
+  "LINKS_RATE": 0.12,
   
-  "BASE_ENERGY": 0.005,
-  "MOVE_ENERGY": 0.000005,
+  "BASE_ENERGY": 0.003,
+  "MOVE_ENERGY": 0.0000003,
   "SIZE2ENG": 200,
   "SIZE_COST": 300,
-  "ATK_ENG": 0.4,
-  "EAT_ENG": 0.1,
-  "VEGE2ENG": 4,
-  "MEAT2ENG": 6.0,
+  "ATK_ENG": 0.06,
+  "EAT_ENG": 0.03,
+  "VEGE2ENG": 3.5,
+  "MEAT2ENG": 7,
   "RUN_COST": 40,
-  "RUN_TIME": 6,
+  "RUN_TIME": 8,
 
   "REP_TIME": 120,
   "REP_ENERGY": 0.3,
   "CHILDS_NUM": 1,
   "MEM_TIME": 0.25,
-  "MEAT_TIME": 240,
-  "DIET_MOD": 0.005,
+  "MEAT_TIME": 360,
+  "DIET_MOD": 0.004,
   
   "DIFF": 0.4,
   "H2C": 1,
@@ -59,15 +59,16 @@
   
   "MIN_CARNIVORES": 2,
   "MIN_HERBIVORES": 4,
-  "RANK_SIZE": 30,
+  "RANK_SIZE": 20,
   "RANK_DECAY": 0.5,
-  "AUTO_SAVE_TIME": 100,
+  "AUTO_SAVE_TIME": 500,
   "STAT_PERIOD": 100,
   "TIME": 1,
   
   "ROCK_NUM": 0,
   "WATER_COST": 0.01,
   "WATER_MOVE": 0.1,
+  "NEURON_MOD": 40,
   
   "NET": [16, 0, 0, 0, 0, 0, 0, 0, 6]
 }
