--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "font",
         "hwsurface",
         "meat",
+        "neuros",
         "obstacle",
         "physionomy",
         "rpos",
