--- a/saves/projects.json
+++ b/saves/projects.json
@@ -1,5 +1,1 @@
-<<<<<<< HEAD
-{"projects": ["Univ12", "Univ14", "A"]}
-=======
-{"projects": ["Collisions2", "Run", "S", "CFG"]}
->>>>>>> develop
+{"projects": ["Sin"]}
