--- a/.gitignore
+++ b/.gitignore
@@ -1853,3 +1853,44 @@ lib/__pycache__/camera.cpython-39.pyc
 lib/__pycache__/statistics.cpython-39.pyc
 lib/__pycache__/camera.cpython-39.pyc
 lib/__pycache__/statistics.cpython-39.pyc
+output/res/icons/planet2-32.ico
+output/res/icons/planet2-128.ico
+output/res/icons/planet2-256.ico
+output/res/icons/planet3-32.ico
+output/res/icons/planet3-128.ico
+output/res/icons/planet05c.ico
+output/res/icons/planet32.ico
+output/res/icons/planet64.ico
+output/res/icons/planet64b.ico
+output/res/icons/planet96.ico
+output/res/icons/planet128.ico
+output/res/images/map2 — kopia (2).png
+output/res/images/map2 — kopia.png
+output/res/images/map2.png
+output/res/images/planet2-128.png
+output/res/images/planet2-256.png
+output/res/images/planet3-32_.png
+output/res/images/planet3-32.png
+output/res/images/planet3-128.png
+output/res/images/planet3-256.png
+output/res/images/planet32.png
+output/res/images/planet64.png
+output/res/images/planet96.png
+output/res/images/planet128.png
+output/res/themes/__blue.json
+output/saves/NewLand/100.json
+output/saves/NewLand/200.json
+output/saves/NewLand/296.json
+output/saves/NewLand/300.json
+output/saves/NewLand/400.json
+output/saves/NewLand/500.json
+output/saves/NewLand/600.json
+output/saves/NewLand/700.json
+output/saves/NewLand/800.json
+output/saves/NewLand/900.json
+output/saves/NewLand/1000.json
+output/saves/NewLand/1053.json
+output/saves/creatures/IFBUNA.json
+output/saves/creatures/NUVUPJ.json
+output/saves/creatures/SULLFK.json
+output/saves/creatures/ZUTOXF.json
