--- a/config.json
+++ b/config.json
@@ -28,6 +28,7 @@
   "SENSOR_RANGE": 350,
   "POWER_COST": 0.0004,
   "MUTATIONS": 1,
+  "MUTATIONS_RATE": 1,
   "LINKS_RATE": 0.2,
   
   "BASE_ENERGY": 0.0025,
