--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
   "SCREEN": [1800, 950],
   "FONT_SIZE": 14,
 
+  
   "PLANT_MIN_NUM": 5,
   "PLANT_MAX_NUM": 70,
   "PLANT_INIT_NUM": 30,
@@ -16,18 +17,19 @@
   "CREATURE_INIT_NUM": 50,
   "CREATURE_MULTIPLY": 0.001,
   "CREATURE_MIN_SIZE": 4,
-  "CREATURE_MAX_SIZE": 12,
+  "CREATURE_MAX_SIZE": 10,
 
   "EAT": 25,
   "HIT": 300,
   "SPEED": 2,
   "TURN": 1,
   "SENSOR_SPEED": 0.3,
-  "SENSOR_MAX_ANGLE": 1.8,
-  "SENSOR_RANGE": 350,
+  "SENSOR_MAX_ANGLE": 1.4,
+  "SENSOR_RANGE": 400,
   "POWER_COST": 0.0004,
   "MUTATIONS": 1,
-  "LINKS_RATE": 0.2,
+  "MUTATIONS_RATE": 1,
+  "LINKS_RATE": 0.18,
   
   "BASE_ENERGY": 0.0025,
   "MOVE_ENERGY": 0.0000004,
