--- a/saves/projects.json
+++ b/saves/projects.json
@@ -1,1 +1,1 @@
-{"projects": ["Collisions2", "Collisions3", "Run", "NewWorld", "CFG"]}
+{"projects": ["Collisions2", "Collisions3", "Run", "NewWorld", "CFG", "NewLand3"]}
