--- a/config.json
+++ b/config.json
@@ -13,22 +13,22 @@
   "PLANT_LIFE": 500,
   "PLANT_RANGE": 250,
 
-  "CREATURE_MIN_NUM": 20,
+  "CREATURE_MIN_NUM": 18,
   "CREATURE_INIT_NUM": 50,
   "CREATURE_MULTIPLY": 0.001,
   "CREATURE_MIN_SIZE": 4,
   "CREATURE_MAX_SIZE": 10,
 
-  "EAT": 25,
+  "EAT": 20,
   "HIT": 300,
   "SPEED": 2,
   "TURN": 1,
   "SENSOR_SPEED": 0.3,
-  "SENSOR_MAX_ANGLE": 1.4,
-  "SENSOR_RANGE": 400,
+  "SENSOR_MAX_ANGLE": 3,
+  "SENSOR_RANGE": 350,
   "POWER_COST": 0.0004,
-  "MUTATIONS": 1,
-  "MUTATIONS_RATE": 1,
+  "MUTATIONS": 2,
+  "MUTATIONS_RATE": 2,
   "LINKS_RATE": 0.18,
   
   "BASE_ENERGY": 0.0025,
@@ -62,7 +62,7 @@
   "MIN_HERBIVORES": 4,
   "RANK_SIZE": 20,
   "RANK_DECAY": 0.5,
-  "AUTO_SAVE_TIME": 100,
+  "AUTO_SAVE_TIME": 250,
   "STAT_PERIOD": 50,
   "TIME": 1,
   
@@ -70,7 +70,8 @@
   "WATER_COST": 0.01,
   "WATER_MOVE": 0.1,
   "NEURON_MOD": 50,
-  "NET_BASE": 375,
+  "NET_BASE": 300,
+  "GENERATIONS_NUMBER": 5,
   
   "NET": [14, 0, 0, 0, 0, 0, 0, 0, 5]
 }
