--- a/config.json
+++ b/config.json
@@ -62,14 +62,15 @@
   "MIN_HERBIVORES": 4,
   "RANK_SIZE": 20,
   "RANK_DECAY": 0.5,
-  "AUTO_SAVE_TIME": 250,
-  "STAT_PERIOD": 50,
+  "AUTO_SAVE_TIME": 500,
+  "STAT_PERIOD": 100,
   "TIME": 1,
   
   "ROCK_NUM": 0,
   "WATER_COST": 0.01,
   "WATER_MOVE": 0.1,
   "NEURON_MOD": 50,
+  "NEURO_COST": 0.001,
   "NET_BASE": 300,
   "GENERATIONS_NUMBER": 5,
   
