--- a/.gitignore
+++ b/.gitignore
@@ -1894,3 +1894,4 @@ output/saves/creatures/IFBUNA.json
 output/saves/creatures/NUVUPJ.json
 output/saves/creatures/SULLFK.json
 output/saves/creatures/ZUTOXF.json
+output/evo5.exe
