--- a/config.json
+++ b/config.json
@@ -1,13 +1,11 @@
 {
   "WORLD": [1800, 950],
   "SCREEN": [1800, 950],
-  "FONT_SIZE": 14,
-
+  "ITER": 4,
   
   "PLANT_MIN_NUM": 5,
   "PLANT_MAX_NUM": 80,
   "PLANT_INIT_NUM": 50,
-  "PLANT_MULTIPLY": 0.3,
   "PLANT_MAX_SIZE": 11,
   "PLANT_GROWTH": 13,
   "PLANT_LIFE": 500,
@@ -23,9 +21,12 @@
   "HIT": 600,
   "SPEED": 2,
   "TURN": 1,
+
   "SENSOR_SPEED": 0.3,
   "SENSOR_MAX_ANGLE": 3,
   "SENSOR_RANGE": 350,
+  "CLOSE_VISION": 10,
+  
   "POWER_COST": 0.0004,
   "MUTATIONS": 2,
   "MUTATIONS_RATE": 2,
@@ -45,12 +46,11 @@
   "REP_TIME": 120,
   "REP_ENERGY": 0.3,
   "CHILDS_NUM": 1,
-  "MEM_TIME": 0.5,
+  "MEM_TIME": 0.25,
   "MEAT_TIME": 200,
   "DIET_MOD": 0.004,
   
   "DIFF": 0.4,
-  "H2C": 1,
   
   "HIT2FIT": 0.1,
   "KILL2FIT": 500,
