--- a/.gitignore
+++ b/.gitignore
@@ -1895,3 +1895,5 @@ output/saves/creatures/NUVUPJ.json
 output/saves/creatures/SULLFK.json
 output/saves/creatures/ZUTOXF.json
 output/evo5.exe
+main.html
+main.html
