--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
   "PLANT_LIFE": 500,
   "PLANT_RANGE": 400,
 
-  "CREATURE_MIN_NUM": 5,
+  "CREATURE_MIN_NUM": 20,
   "CREATURE_INIT_NUM": 80,
   "CREATURE_MULTIPLY": 0.002,
   "CREATURE_MIN_SIZE": 4,
@@ -28,7 +28,7 @@
   "CLOSE_VISION": 10,
   
   "POWER_COST": 0.0004,
-  "MUTATIONS": 1,
+  "MUTATIONS": 2,
   "LINKS_RATE": 0.2,
   
   "BASE_ENERGY": 0.0035,
@@ -39,6 +39,7 @@
   "EAT_ENG": 0.06,
   "VEGE2ENG": 4,
   "MEAT2ENG": 12,
+  "DMG2ENG": 1,
   "RUN_COST": 120,
   "RUN_TIME": 6,
 
