--- a/config.json
+++ b/config.json
@@ -1,59 +1,58 @@
 {
-  "WORLD": [1800, 950],
-  "SCREEN": [1900, 1000],
+  "WORLD": [3000, 2000],
+  "SCREEN": [1800, 950],
   "ITER": 1,
   
-  "PLANT_MIN_NUM": 10,
-  "PLANT_MAX_NUM": 70,
-  "PLANT_INIT_NUM": 50,
+  "PLANT_MIN_NUM": 18,
+  "PLANT_MAX_NUM": 220,
+  "PLANT_INIT_NUM": 100,
   "PLANT_MAX_SIZE": 11,
-  "PLANT_GROWTH": 11,
+  "PLANT_GROWTH": 14,
   "PLANT_LIFE": 500,
-  "PLANT_RANGE": 400,
+  "PLANT_RANGE": 1500,
 
-  "CREATURE_MIN_NUM": 20,
+  "CREATURE_MIN_NUM": 8,
   "CREATURE_INIT_NUM": 80,
-  "CREATURE_MULTIPLY": 0.002,
+  "CREATURE_MULTIPLY": 0.003,
   "CREATURE_MIN_SIZE": 4,
   "CREATURE_MAX_SIZE": 10,
 
   "EAT": 25,
-  "HIT": 400,
-  "SPEED": 2,
+  "HIT": 300,
+  "SPEED": 1.5,
   "TURN": 1,
 
   "SENSOR_SPEED": 0.3,
   "SENSOR_MAX_ANGLE": 5,
-  "SENSOR_RANGE": 400,
-  "CLOSE_VISION": 10,
-  
-  "POWER_COST": 0.0004,
-  "MUTATIONS": 3,
+  "SENSOR_RANGE": 550,
+  "CLOSE_VISION": 25,
+  "POWER_COST": 0.008,
+  "MUTATIONS": 4,
   "LINKS_RATE": 0.23,
   
-  "BASE_ENERGY": 0.003,
-  "MOVE_ENERGY": 0.00000025,
+  "BASE_ENERGY": 0.002,
+  "MOVE_ENERGY": 0.00005,
   "SIZE2ENG": 200,
-  "SIZE_COST": 300,
-  "ATK_ENG": 0.06,
-  "EAT_ENG": 0.06,
-  "VEGE2ENG": 3.5,
-  "MEAT2ENG": 12,
-  "DMG2ENG": 5,
-  "RUN_COST": 200,
-  "RUN_TIME": 6,
+  "SIZE_COST": 250,
+  "ATK_ENG": 1,
+  "EAT_ENG": 1,
+  "VEGE2ENG": 2,
+  "MEAT2ENG": 16,
+  "DMG2ENG": 3.5,
+  "RUN_COST": 2,
+  "RUN_TIME": 8,
 
-  "REP_TIME": 120,
+  "REP_TIME": 220,
   "REP_ENERGY": 0.3,
   "CHILDS_NUM": 1,
-  "MEM_TIME": 0.25,
-  "MEAT_TIME": 100,
+  "MEM_TIME": 0.4,
+  "MEAT_TIME": 120,
   "DIET_MOD": 0.0035,
   
   "DIFF": 0.4,
   
   "HIT2FIT": 0.1,
-  "KILL2FIT": 400,
+  "KILL2FIT": 250,
   "MEAT2FIT": 0.1,
   "VEGE2FIT": 0.06,
   "BORN2FIT": 250,
@@ -66,16 +65,16 @@
   "STAT_PERIOD": 100,
   "TIME": 1,
   
-  "ROCK_NUM": 10,
-  "ROCK_SIZE_MIN": 20,
-  "ROCK_SIZE_MAX": 80,
+  "ROCK_NUM": 28,
+  "ROCK_SIZE_MIN": 30,
+  "ROCK_SIZE_MAX": 160,
   "ROCK_VERT_MIN": 4,
-  "ROCK_VERT_MAX": 7,
+  "ROCK_VERT_MAX": 12,
   "WATER_COST": 0.01,
   "WATER_MOVE": 0.1,
   "NEURON_MOD": 50,
-  "NEURO_COST": 0.01,
-  "NET_BASE": 350,
+  "NEURO_COST": 0.02,
+  "NET_BASE": 150,
   "GENERATIONS_NUMBER": 2,
   
   "NET": [15, 0, 0, 0, 0, 0, 0, 0, 5]
