--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
   "SCREEN": [1800, 950],
   "ITER": 1,
   
-  "PLANT_MIN_NUM": 18,
+  "PLANT_MIN_NUM": 10,
   "PLANT_MAX_NUM": 220,
   "PLANT_INIT_NUM": 100,
   "PLANT_MAX_SIZE": 11,
@@ -11,42 +11,42 @@
   "PLANT_LIFE": 500,
   "PLANT_RANGE": 1500,
 
-  "CREATURE_MIN_NUM": 8,
-  "CREATURE_INIT_NUM": 80,
+  "CREATURE_MIN_NUM": 30,
+  "CREATURE_INIT_NUM": 120,
   "CREATURE_MULTIPLY": 0.003,
   "CREATURE_MIN_SIZE": 4,
   "CREATURE_MAX_SIZE": 10,
 
   "EAT": 25,
   "HIT": 300,
-  "SPEED": 1.5,
-  "TURN": 1,
+  "SPEED": 2,
+  "TURN": 1.3,
 
   "SENSOR_SPEED": 0.3,
   "SENSOR_MAX_ANGLE": 5,
   "SENSOR_RANGE": 550,
   "CLOSE_VISION": 25,
   "POWER_COST": 0.008,
-  "MUTATIONS": 4,
-  "LINKS_RATE": 0.23,
+  "MUTATIONS": 6,
+  "LINKS_RATE": 0.2,
   
-  "BASE_ENERGY": 0.002,
-  "MOVE_ENERGY": 0.00005,
+  "BASE_ENERGY": 0.0015,
+  "MOVE_ENERGY": 0.000035,
   "SIZE2ENG": 200,
-  "SIZE_COST": 250,
+  "SIZE_COST": 280,
   "ATK_ENG": 1,
   "EAT_ENG": 1,
-  "VEGE2ENG": 2,
+  "VEGE2ENG": 4,
   "MEAT2ENG": 16,
-  "DMG2ENG": 3.5,
+  "DMG2ENG": 4,
   "RUN_COST": 2,
-  "RUN_TIME": 8,
+  "RUN_TIME": 6,
 
-  "REP_TIME": 220,
+  "REP_TIME": 120,
   "REP_ENERGY": 0.3,
   "CHILDS_NUM": 1,
-  "MEM_TIME": 0.4,
-  "MEAT_TIME": 120,
+  "MEM_TIME": 0.35,
+  "MEAT_TIME": 180,
   "DIET_MOD": 0.0035,
   
   "DIFF": 0.4,
@@ -74,8 +74,10 @@
   "WATER_MOVE": 0.1,
   "NEURON_MOD": 50,
   "NEURO_COST": 0.02,
-  "NET_BASE": 150,
+  "NET_BASE": 425,
+  "GRAPH_H": 80,
+  "GRAPH_V": 28,
   "GENERATIONS_NUMBER": 2,
   
-  "NET": [15, 0, 0, 0, 0, 0, 0, 0, 5]
+  "NET": [16, 0, 0, 0, 0, 0, 0, 0, 5]
 }
