--- a/config.json
+++ b/config.json
@@ -1,18 +1,18 @@
 {
-  "WORLD": [3000, 2000],
+  "WORLD": [1900, 1000],
   "SCREEN": [1900, 1000],
   "ITER": 1,
   
   "PLANT_MIN_NUM": 10,
-  "PLANT_MAX_NUM": 220,
-  "PLANT_INIT_NUM": 100,
+  "PLANT_MAX_NUM": 80,
+  "PLANT_INIT_NUM": 60,
   "PLANT_MAX_SIZE": 11,
   "PLANT_GROWTH": 14,
   "PLANT_LIFE": 500,
-  "PLANT_RANGE": 1500,
+  "PLANT_RANGE": 600,
 
-  "CREATURE_MIN_NUM": 30,
-  "CREATURE_INIT_NUM": 120,
+  "CREATURE_MIN_NUM": 18,
+  "CREATURE_INIT_NUM": 60,
   "CREATURE_MULTIPLY": 0.003,
   "CREATURE_MIN_SIZE": 4,
   "CREATURE_MAX_SIZE": 10,
@@ -25,14 +25,16 @@
 
   "SENSOR_SPEED": 0.3,
   "SENSOR_MAX_ANGLE": 5,
-  "SENSOR_RANGE": 550,
-  "CLOSE_VISION": 25,
+  "SENSOR_RANGE": 400,
+  "CLOSE_VISION": 16,
   "POWER_COST": 0.008,
-  "MUTATIONS": 6,
+  "MUTATIONS": 3,
+  "DEL_LINK": 0.1,
+  "DEL_NODE": 0.1,
   "LINKS_RATE": 0.2,
   
-  "BASE_ENERGY": 0.0015,
-  "MOVE_ENERGY": 0.000035,
+  "BASE_ENERGY": 0.002,
+  "MOVE_ENERGY": 0.00002,
   "SIZE2ENG": 200,
   "SIZE_COST": 280,
   "ATK_ENG": 1,
@@ -47,7 +49,7 @@
   "REP_ENERGY": 0.3,
   "CHILDS_NUM": 1,
   "MEM_TIME": 0.35,
-  "MEAT_TIME": 180,
+  "MEAT_TIME": 120,
   "DIET_MOD": 0.0035,
   
   "DIFF": 0.4,
@@ -66,18 +68,18 @@
   "STAT_PERIOD": 100,
   "TIME": 1,
   
-  "ROCK_NUM": 28,
+  "ROCK_NUM": 16,
   "ROCK_SIZE_MIN": 30,
-  "ROCK_SIZE_MAX": 160,
+  "ROCK_SIZE_MAX": 100,
   "ROCK_VERT_MIN": 4,
-  "ROCK_VERT_MAX": 12,
+  "ROCK_VERT_MAX": 8,
   "WATER_COST": 0.01,
   "WATER_MOVE": 0.1,
   "NEURON_MOD": 50,
   "NEURO_COST": 0.02,
-  "NET_BASE": 425,
-  "GRAPH_H": 80,
-  "GRAPH_V": 28,
+  "NET_BASE": 250,
+  "GRAPH_H": 30,
+  "GRAPH_V": 15,
   "GENERATIONS_NUMBER": 2,
   
   "NET": [15, 0, 0, 0, 0, 0, 0, 0, 5]
