--- a/config.json
+++ b/config.json
@@ -1,18 +1,19 @@
 {
-  "WORLD": [1900, 1000],
-  "SCREEN": [1900, 1000],
+  "WORLD": [2700, 2000],
+  "SCREEN": [1500, 900],
   "ITER": 1,
   
-  "PLANT_MIN_NUM": 10,
-  "PLANT_MAX_NUM": 80,
-  "PLANT_INIT_NUM": 60,
+  "PLANT_MIN_NUM": 20,
+  "PLANT_MAX_NUM": 140,
+  "PLANT_INIT_NUM": 75,
   "PLANT_MAX_SIZE": 11,
-  "PLANT_GROWTH": 14,
-  "PLANT_LIFE": 500,
-  "PLANT_RANGE": 600,
+  "PLANT_GROWTH": 17,
+  "PLANT_LIFE": 400,
+  "PLANT_RANGE": 1200,
+  "PLANT_EDGE": 100,
 
-  "CREATURE_MIN_NUM": 18,
-  "CREATURE_INIT_NUM": 60,
+  "CREATURE_MIN_NUM": 12,
+  "CREATURE_INIT_NUM": 80,
   "CREATURE_MULTIPLY": 0.003,
   "CREATURE_MIN_SIZE": 4,
   "CREATURE_MAX_SIZE": 10,
@@ -21,61 +22,61 @@
   "EAT": 25,
   "HIT": 300,
   "SPEED": 2,
-  "TURN": 1.3,
+  "TURN": 1.2,
 
   "SENSOR_MAX_ANGLE": 5,
-  "SENSOR_RANGE": 400,
-  "CLOSE_VISION": 16,
-  "POWER_COST": 0.008,
-  "MUTATIONS": 3,
-  "DEL_LINK": 0.1,
-  "DEL_NODE": 0.1,
+  "SENSOR_RANGE": 550,
+  "CLOSE_VISION": 12,
+  "POWER_COST": 0.01,
+  "MUTATIONS": 2,
+  "DEL_LINK": 0.2,
+  "DEL_NODE": 0.05,
   "LINKS_RATE": 0.2,
   
   "BASE_ENERGY": 0.002,
   "MOVE_ENERGY": 0.00002,
   "SIZE2ENG": 200,
   "SIZE_COST": 280,
-  "ATK_ENG": 1,
-  "EAT_ENG": 1,
-  "VEGE2ENG": 4,
-  "MEAT2ENG": 16,
-  "DMG2ENG": 4,
+  "ATK_ENG": 0.5,
+  "EAT_ENG": 0.5,
+  "VEGE2ENG": 2,
+  "MEAT2ENG": 8,
+  "DMG2ENG": 2.5,
   "RUN_COST": 2,
-  "RUN_TIME": 6,
+  "RUN_TIME": 8,
 
-  "REP_TIME": 120,
+  "REP_TIME": 100,
   "REP_ENERGY": 0.3,
   "CHILDS_NUM": 1,
   "MEM_TIME": 0.35,
   "MEAT_TIME": 120,
-  "DIET_MOD": 0.0035,
+  "DIET_MOD": 0.0045,
   
   "DIFF": 0.4,
   
   "HIT2FIT": 0.1,
   "KILL2FIT": 250,
   "MEAT2FIT": 0.1,
-  "VEGE2FIT": 0.06,
+  "VEGE2FIT": 0.1,
   "BORN2FIT": 250,
   
   "MIN_CARNIVORES": 2,
   "MIN_HERBIVORES": 4,
-  "RANK_SIZE": 40,
+  "RANK_SIZE": 45,
   "RANK_DECAY": 0.7,
   "AUTO_SAVE_TIME": 100,
   "STAT_PERIOD": 100,
   "TIME": 1,
   
-  "ROCK_NUM": 16,
-  "ROCK_SIZE_MIN": 30,
-  "ROCK_SIZE_MAX": 100,
+  "ROCK_NUM": 10,
+  "ROCK_SIZE_MIN": 60,
+  "ROCK_SIZE_MAX": 120,
   "ROCK_VERT_MIN": 4,
-  "ROCK_VERT_MAX": 8,
+  "ROCK_VERT_MAX": 10,
   "NEURON_MOD": 50,
-  "NEURO_COST": 0.02,
+  "NEURO_COST": 0.03,
   "NET_BASE": 250,
-  "GRAPH_H": 30,
+  "GRAPH_H": 40,
   "GRAPH_V": 15,
   "GENERATIONS_NUMBER": 2,
   
