--- a/.gitignore
+++ b/.gitignore
@@ -2182,3 +2182,4 @@ output/saves/WORLD01/saves.json
 output/saves/WORLD01/40.json
 output/saves/WORLD01/140.json
 output/saves/WORLD01/saves.json
+output/_evo.exe
