--- a/.gitignore
+++ b/.gitignore
@@ -2183,3 +2183,15 @@ output/saves/WORLD01/40.json
 output/saves/WORLD01/140.json
 output/saves/WORLD01/saves.json
 output/_evo.exe
+lib/__pycache__/camera.cpython-39.pyc
+lib/__pycache__/species.cpython-39.pyc
+lib/__pycache__/statistics.cpython-39.pyc
+lib/__pycache__/camera.cpython-39.pyc
+lib/__pycache__/species.cpython-39.pyc
+lib/__pycache__/statistics.cpython-39.pyc
+lib/__pycache__/camera.cpython-39.pyc
+lib/__pycache__/species.cpython-39.pyc
+lib/__pycache__/statistics.cpython-39.pyc
+lib/__pycache__/camera.cpython-39.pyc
+lib/__pycache__/species.cpython-39.pyc
+lib/__pycache__/statistics.cpython-39.pyc
