--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,7 +42,8 @@
         "titleBar.activeBackground": "#0bb489",
         "titleBar.activeForeground": "#e7e7e7",
         "titleBar.inactiveBackground": "#0bb48999",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "titleBar.inactiveForeground": "#e7e7e799",
+        "commandCenter.border": "#e7e7e799"
     },
     "peacock.color": "#0bb489"
 }
