--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,7 @@
             "command": "auto-py-to-exe",
             "problemMatcher": [],
             "group": {
-                "kind": "BUILD",
+                "kind": "build",
                 "isDefault": true
             }
         },
@@ -19,7 +19,7 @@
             "command": "python -O main.py ",
             "problemMatcher": [],
             "group": {
-                "kind": "RUN",
+                "kind": "none",
                 "isDefault": true
             }
         }
