--- a/config.json
+++ b/config.json
@@ -1,58 +1,59 @@
 {
-  "WORLD": [3000, 2000],
-  "SCREEN": [900, 600],
+  "WORLD": [600, 600],
+  "SCREEN": [600, 600],
   "ITER": 1,
   "FPS": 30,
   
-  "PLANT_MIN_NUM": 5,
-  "PLANT_MAX_NUM": 125,
-  "PLANT_INIT_NUM": 100,
-  "PLANT_MAX_SIZE": 11,
-  "PLANT_GROWTH": 25,
+  "PLANT_MIN_NUM": 1,
+  "PLANT_MAX_NUM": 5,
+  "PLANT_INIT_NUM": 3,
+  "PLANT_MAX_SIZE": 9,
+  "PLANT_GROWTH": 20,
   "PLANT_LIFE": 400,
-  "PLANT_RANGE": 1000,
+  "PLANT_RANGE": 150,
   "PLANT_EDGE": 50,
 
-  "CREATURE_MIN_NUM": 4,
-  "CREATURE_INIT_NUM": 100,
+  "CREATURE_MIN_NUM": 1,
+  "CREATURE_MAX_NUM": 3,
+  "CREATURE_INIT_NUM": 3,
   "CREATURE_MULTIPLY": 0.2,
   "CREATURE_MIN_SIZE": 2,
   "CREATURE_MAX_SIZE": 10,
-  "CREATURES_SEP": 200,
+  "CREATURES_SEP": 150,
 
   "EAT": 25,
   "HIT": 300,
-  "SPEED": 2,
+  "SPEED": 1.3,
   "HIDE_SPEED": 0.1,
   "TURN": 1.3,
 
   "SENSOR_MAX_ANGLE": 5,
-  "SENSOR_RANGE": 550,
+  "SENSOR_RANGE": 350,
   "CLOSE_VISION": 20,
   "POWER_COST": 0.1,
-  "MUTATIONS": 3,
+  "MUTATIONS": 4,
   "DEL_LINK": 0.00,
   "DEL_NODE": 0.00,
   "LINKS_RATE": 0.12,
   
-  "BASE_ENERGY": 0.0016,
+  "BASE_ENERGY": 0.003,
   "MOVE_ENERGY": 0.00003,
   "SIZE2ENG": 200,
-  "SIZE_COST": 400,
+  "SIZE_COST": 350,
   "ATK_ENG": 0.1,
   "EAT_ENG": 0.1,
   "VEGE2ENG": 2.5,
   "MEAT2ENG": 12,
-  "DMG2ENG": 5,
+  "DMG2ENG": 4,
   "RUN_COST": 4,
-  "RUN_TIME": 8,
+  "RUN_TIME": 4,
 
-  "REP_TIME": 200,
+  "REP_TIME": 140,
   "REP_ENERGY": 0.3,
   "CHILDS_NUM": 1,
   "MEM_TIME": 0.5,
-  "MEAT_TIME": 120,
-  "DIET_MOD": 0.003,
+  "MEAT_TIME": 40,
+  "DIET_MOD": 0.0035,
   
   "DIFF": 0.35,
   
@@ -64,22 +65,22 @@
   
   "MIN_CARNIVORES": 2,
   "MIN_HERBIVORES": 4,
-  "RANK_SIZE": 70,
+  "RANK_SIZE": 40,
   "RANK_DECAY": 0.7,
   "AUTO_SAVE_TIME": 100,
   "STAT_PERIOD": 100,
   "TIME": 1,
   
-  "ROCK_NUM": 30,
+  "ROCK_NUM": 5,
   "ROCK_SIZE_MIN": 10,
-  "ROCK_SIZE_MAX": 100,
-  "ROCK_VERT_MIN": 10,
-  "ROCK_VERT_MAX": 20,
+  "ROCK_SIZE_MAX": 40,
+  "ROCK_VERT_MIN": 6,
+  "ROCK_VERT_MAX": 10,
   "NEURON_MOD": 50,
   "NEURO_COST": 0.05,
-  "NET_BASE": 320,
-  "GRAPH_H": 30,
-  "GRAPH_V": 20,
+  "NET_BASE": 200,
+  "GRAPH_H": 15,
+  "GRAPH_V": 12,
   "GENERATIONS_NUMBER": 50,
   
   "NET": [16, 0, 0, 0, 0, 0, 0, 0, 5]
