--- a/.gitignore
+++ b/.gitignore
@@ -2195,3 +2195,114 @@ lib/__pycache__/statistics.cpython-39.pyc
 lib/__pycache__/camera.cpython-39.pyc
 lib/__pycache__/species.cpython-39.pyc
 lib/__pycache__/statistics.cpython-39.pyc
+output/evo_no_stat.exe
+output/saves/NEW RULES/100.json
+output/saves/NEW RULES/200.json
+output/saves/NEW RULES/300.json
+output/saves/NEW RULES/400.json
+output/saves/NEW RULES/500.json
+output/saves/NEW RULES/600.json
+output/saves/NEW RULES/700.json
+output/saves/NEW RULES/716.json
+output/saves/NEW RULES/729.json
+output/saves/NEW RULES/829.json
+output/saves/NEW RULES/929.json
+output/saves/NEW RULES/1029.json
+output/saves/NEW RULES/1129.json
+output/saves/NEW RULES/1229.json
+output/saves/NEW RULES/1329.json
+output/saves/NEW RULES/1429.json
+output/saves/NEW RULES/1529.json
+output/saves/NEW RULES/1629.json
+output/saves/NEW RULES/1729.json
+output/saves/NEW RULES/1829.json
+output/saves/NEW RULES/1929.json
+output/saves/NEW RULES/2029.json
+output/saves/NEW RULES/2129.json
+output/saves/NEW RULES/2229.json
+output/saves/NEW RULES/2329.json
+output/saves/NEW RULES/2429.json
+output/saves/NEW RULES/2529.json
+output/saves/NEW RULES/2629.json
+output/saves/NEW RULES/2729.json
+output/saves/NEW RULES/2829.json
+output/saves/NEW RULES/2929.json
+output/saves/NEW RULES/3029.json
+output/saves/NEW RULES/3129.json
+output/saves/NEW RULES/3229.json
+output/saves/NEW RULES/3329.json
+output/saves/NEW RULES/3429.json
+output/saves/NEW RULES/3529.json
+output/saves/NEW RULES/3629.json
+output/saves/NEW RULES/3729.json
+output/saves/NEW RULES/3829.json
+output/saves/NEW RULES/3929.json
+output/saves/NEW RULES/4029.json
+output/saves/NEW RULES/4129.json
+output/saves/NEW RULES/4229.json
+output/saves/NEW RULES/4329.json
+output/saves/NEW RULES/4429.json
+output/saves/NEW RULES/4529.json
+output/saves/NEW RULES/4629.json
+output/saves/NEW RULES/4729.json
+output/saves/NEW RULES/4829.json
+output/saves/NEW RULES/4929.json
+output/saves/NEW RULES/5029.json
+output/saves/NEW RULES/5129.json
+output/saves/NEW RULES/5229.json
+output/saves/NEW RULES/5329.json
+output/saves/NEW RULES/5429.json
+output/saves/NEW RULES/5529.json
+output/saves/NEW RULES/5629.json
+output/saves/NEW RULES/5729.json
+output/saves/NEW RULES/5829.json
+output/saves/NEW RULES/5929.json
+output/saves/NEW RULES/6029.json
+output/saves/NEW RULES/6129.json
+output/saves/NEW RULES/6229.json
+output/saves/NEW RULES/6329.json
+output/saves/NEW RULES/6429.json
+output/saves/NEW RULES/6529.json
+output/saves/NEW RULES/6629.json
+output/saves/NEW RULES/6729.json
+output/saves/NEW RULES/6829.json
+output/saves/NEW RULES/6929.json
+output/saves/NEW RULES/7029.json
+output/saves/NEW RULES/saves.json
+output/saves/NextHope/54.json
+output/saves/NextHope/3036.json
+output/saves/NextHope/6233.json
+output/saves/NextHope/9733.json
+output/saves/NextHope/13233.json
+output/saves/NextHope/16733.json
+output/saves/NextHope/20233.json
+output/saves/NextHope/23733.json
+output/saves/NextHope/27233.json
+output/saves/NextHope/30733.json
+output/saves/NextHope/33549.json
+output/saves/NextHope/34049.json
+output/saves/NextHope/34549.json
+output/saves/NextHope/35049.json
+output/saves/NextHope/35549.json
+output/saves/NextHope/36049.json
+output/saves/NextHope/36052.json
+output/saves/NextHope/saves.json
+output/saves/creatures/DODJMK.json
+output/saves/creatures/DOQAVU.json
+output/saves/creatures/IICEPD.json
+output/saves/creatures/IOJSFE.json
+output/saves/creatures/IOMEXU.json
+output/saves/creatures/IUDFMK.json
+output/saves/creatures/IUMMMK.json
+output/saves/creatures/IUZYMK.json
+output/saves/creatures/JRTPXU.json
+output/saves/creatures/JRTVXZ.json
+output/saves/creatures/JSIFPZ.json
+output/saves/creatures/PUIEDT.json
+output/saves/creatures/SFHUDK.json
+output/saves/creatures/SOARBU.json
+output/saves/creatures/TJUONF.json
+output/saves/creatures/USBFJJ.json
+output/saves/creatures/USBRJJ.json
+output/saves/creatures/USBRPJ.json
+output/saves/creatures/XXBTKF.json
