--- a/.gitignore
+++ b/.gitignore
@@ -2665,3 +2665,22 @@ output/saves/NEW/26235.json
 output/saves/NEW/26335.json
 output/saves/NEW/26435.json
 Untitled-1.ipynb
+output/saves/NEW/26473.json
+output/saves/NEW/26573.json
+output/saves/NEW/26673.json
+output/saves/NEW/26773.json
+output/saves/NEW/26873.json
+output/saves/NEW/26973.json
+output/saves/NEW/27073.json
+output/saves/NEW/27173.json
+output/saves/NEW/27273.json
+output/saves/NEW/27373.json
+output/saves/NEW/27473.json
+output/saves/NEW/27573.json
+output/saves/NEW/27673.json
+output/saves/NEW/27773.json
+output/saves/NEW/27873.json
+output/saves/NEW/27973.json
+output/saves/NEW/28073.json
+output/saves/NEW/28173.json
+output/saves/NEW/28178.json
