--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
   "PLANT_MAX_NUM": 120,
   "PLANT_INIT_NUM": 100,
   "PLANT_MAX_SIZE": 11,
-  "PLANT_GROWTH": 25,
+  "PLANT_GROWTH": 20,
   "PLANT_LIFE": 450,
   "PLANT_RANGE": 800,
   "PLANT_EDGE": 50,
@@ -16,7 +16,7 @@
   "CREATURE_MIN_NUM": 4,
   "CREATURE_INIT_NUM": 60,
   "CREATURE_MULTIPLY": 0.1,
-  "CREATURE_MIN_SIZE": 1,
+  "CREATURE_MIN_SIZE": 2,
   "CREATURE_MAX_SIZE": 10,
   "CREATURES_SEP": 150,
 
@@ -38,12 +38,12 @@
   "BASE_ENERGY": 0.2,
   "MOVE_ENERGY": 0.01,
   "SIZE2ENG": 200,
-  "SIZE_COST": 4,
-  "ATK_ENG": 0.01,
-  "EAT_ENG": 0.01,
-  "VEGE2ENG": 1.5,
-  "MEAT2ENG": 12,
-  "DMG2ENG": 3.5,
+  "SIZE_COST": 2.3,
+  "ATK_ENG": 0.02,
+  "EAT_ENG": 0.02,
+  "VEGE2ENG": 2,
+  "MEAT2ENG": 14,
+  "DMG2ENG": 4,
   "RUN_COST": 2,
   "RUN_TIME": 8,
 
@@ -51,14 +51,15 @@
   "REP_ENERGY": 0.3,
   "CHILDS_NUM": 1,
   "MEM_TIME": 0.5,
-  "MEAT_TIME": 75,
-  "DIET_MOD": 0.0035,
+  "MEAT_TIME": 100,
+  "DIET_MOD": 0.003,
+  "HIDE_MOD": 0.6,
   
   "DIFF": 0.35,
   
   "HIT2FIT": 0.15,
   "KILL2FIT": 350,
-  "MEAT2FIT": 0.1,
+  "MEAT2FIT": 0.15,
   "VEGE2FIT": 0.1,
   "BORN2FIT": 250,
 
@@ -74,7 +75,7 @@
   "ROCK_VERT_MIN": 6,
   "ROCK_VERT_MAX": 15,
   "NEURON_MOD": 50,
-  "NEURO_COST": 0.05,
+  "NEURO_COST": 0.03,
   "NET_BASE": 320,
   "GRAPH_H": 30,
   "GRAPH_V": 20,
