--- a/.gitignore
+++ b/.gitignore
@@ -2195,3 +2195,117 @@ lib/__pycache__/statistics.cpython-39.pyc
 lib/__pycache__/camera.cpython-39.pyc
 lib/__pycache__/species.cpython-39.pyc
 lib/__pycache__/statistics.cpython-39.pyc
+output/saves/NEW/100.json
+output/saves/NEW/1500.json
+output/saves/NEW/2900.json
+output/saves/NEW/4300.json
+output/saves/NEW/5672.json
+output/saves/NEW/7072.json
+output/saves/NEW/8435.json
+output/saves/NEW/9835.json
+output/saves/NEW/11235.json
+output/saves/NEW/12635.json
+output/saves/NEW/14035.json
+output/saves/NEW/15435.json
+output/saves/NEW/16835.json
+output/saves/NEW/18235.json
+output/saves/NEW/19635.json
+output/saves/NEW/19735.json
+output/saves/NEW/19835.json
+output/saves/NEW/19935.json
+output/saves/NEW/20035.json
+output/saves/NEW/20135.json
+output/saves/NEW/20235.json
+output/saves/NEW/20335.json
+output/saves/NEW/20435.json
+output/saves/NEW/20535.json
+output/saves/NEW/20635.json
+output/saves/NEW/20735.json
+output/saves/NEW/20835.json
+output/saves/NEW/20935.json
+output/saves/NEW/21035.json
+output/saves/NEW/21135.json
+output/saves/NEW/21235.json
+output/saves/NEW/21335.json
+output/saves/NEW/21435.json
+output/saves/NEW/21535.json
+output/saves/NEW/21635.json
+output/saves/NEW/21735.json
+output/saves/NEW/21835.json
+output/saves/NEW/21935.json
+output/saves/NEW/22035.json
+output/saves/NEW/22135.json
+output/saves/NEW/22235.json
+output/saves/NEW/22335.json
+output/saves/NEW/22435.json
+output/saves/NEW/22535.json
+output/saves/NEW/22635.json
+output/saves/NEW/22735.json
+output/saves/NEW/22835.json
+output/saves/NEW/22935.json
+output/saves/NEW/23035.json
+output/saves/NEW/23135.json
+output/saves/NEW/23235.json
+output/saves/NEW/23335.json
+output/saves/NEW/23435.json
+output/saves/NEW/23535.json
+output/saves/NEW/23635.json
+output/saves/NEW/23735.json
+output/saves/NEW/23835.json
+output/saves/NEW/23935.json
+output/saves/NEW/24035.json
+output/saves/NEW/24135.json
+output/saves/NEW/24235.json
+output/saves/NEW/24335.json
+output/saves/NEW/24435.json
+output/saves/NEW/24535.json
+output/saves/NEW/24635.json
+output/saves/NEW/24735.json
+output/saves/NEW/24835.json
+output/saves/NEW/24935.json
+output/saves/NEW/25035.json
+output/saves/NEW/25135.json
+output/saves/NEW/25235.json
+output/saves/NEW/25335.json
+output/saves/NEW/25435.json
+output/saves/NEW/25535.json
+output/saves/NEW/25635.json
+output/saves/NEW/25735.json
+output/saves/NEW/25835.json
+output/saves/NEW/25935.json
+output/saves/NEW/26035.json
+output/saves/NEW/26135.json
+output/saves/NEW/26235.json
+output/saves/NEW/26335.json
+output/saves/NEW/26435.json
+output/saves/NEW/26473.json
+output/saves/NEW/26573.json
+output/saves/NEW/26673.json
+output/saves/NEW/26773.json
+output/saves/NEW/26873.json
+output/saves/NEW/26973.json
+output/saves/NEW/27073.json
+output/saves/NEW/27173.json
+output/saves/NEW/27273.json
+output/saves/NEW/27373.json
+output/saves/NEW/27473.json
+output/saves/NEW/27573.json
+output/saves/NEW/27673.json
+output/saves/NEW/27773.json
+output/saves/NEW/27873.json
+output/saves/NEW/27973.json
+output/saves/NEW/28073.json
+output/saves/NEW/28173.json
+output/saves/NEW/28178.json
+output/saves/NEW RULES/1229.json
+output/saves/NEW RULES/2629.json
+output/saves/NEW RULES/4029.json
+output/saves/NEW RULES/5429.json
+output/saves/NEW RULES/6829.json
+output/saves/NEW RULES/6929.json
+output/saves/NEW RULES/7029.json
+output/saves/NEW RULES/saves.json
+output/saves/creatures/DOQAVU.json
+output/saves/creatures/JRTPXU.json
+output/saves/creatures/JRTVXZ.json
+output/saves/creatures/SFHUDK.json
