--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "D:\\PYTHON\\Nature\\env\\Scripts\\python.exe",
+    "python.pythonPath": "D:\\Python39\\Scripts\\python.exe",
     "cSpell.ignoreWords": [
         "ATACK",
         "ENERG",
