--- a/.gitignore
+++ b/.gitignore
@@ -2710,3 +2710,42 @@ output/saves/creatures/DOQAVU.json
 output/saves/creatures/JRTPXU.json
 output/saves/creatures/JRTVXZ.json
 output/saves/creatures/SFHUDK.json
+saves/NEW WORLD/100.json
+saves/NEW WORLD/2900.json
+saves/NEW WORLD/5000.json
+saves/NEW WORLD/7800.json
+saves/NEW WORLD/9900.json
+saves/NEW WORLD/12700.json
+saves/NEW WORLD/14800.json
+saves/NEW WORLD/17600.json
+saves/NEW WORLD/19700.json
+saves/NEW WORLD/22500.json
+saves/NEW WORLD/24600.json
+saves/NEW WORLD/27400.json
+saves/NEW WORLD/29400.json
+saves/NEW WORLD/32200.json
+saves/NEW WORLD/34300.json
+saves/NEW WORLD/37100.json
+saves/NEW WORLD/39200.json
+saves/NEW WORLD/42000.json
+saves/NEW WORLD/44100.json
+saves/NEW WORLD/46900.json
+saves/NEW WORLD/49000.json
+saves/NEW WORLD/51800.json
+saves/NEW WORLD/53900.json
+saves/NEW WORLD/56700.json
+saves/NEW WORLD/58800.json
+saves/NEW WORLD/59500.json
+saves/NEW WORLD/60200.json
+saves/NEW WORLD/60900.json
+saves/NEW WORLD/61600.json
+saves/NEW WORLD/62300.json
+saves/NEW WORLD/63000.json
+saves/NEW WORLD/63700.json
+saves/NEW WORLD/64400.json
+saves/NEW WORLD/65100.json
+saves/NEW WORLD/65800.json
+saves/NEW WORLD/66100.json
+saves/NEW WORLD/66400.json
+saves/NEW WORLD/66484.json
+saves/NEW WORLD/saves.json
