--- a/.gitignore
+++ b/.gitignore
@@ -2749,3 +2749,116 @@ saves/NEW WORLD/66100.json
 saves/NEW WORLD/66400.json
 saves/NEW WORLD/66484.json
 saves/NEW WORLD/saves.json
+saves/NEW WORLD/66584.json
+saves/NEW WORLD/66684.json
+saves/NEW WORLD/66765.json
+saves/NEW WORLD/66865.json
+saves/NEW WORLD/66965.json
+saves/NEW WORLD/67065.json
+saves/NEW WORLD/67165.json
+saves/NEW WORLD/67265.json
+saves/NEW WORLD/67365.json
+saves/NEW WORLD/67465.json
+saves/NEW WORLD/67565.json
+saves/NEW WORLD/67665.json
+saves/NEW WORLD/67765.json
+saves/NEW WORLD/67865.json
+saves/NEW WORLD/67965.json
+saves/NEW WORLD/68065.json
+saves/NEW WORLD/68165.json
+saves/NEW WORLD/68265.json
+saves/NEW WORLD/68365.json
+saves/NEW WORLD/68465.json
+saves/NEW WORLD/68565.json
+saves/NEW WORLD/68665.json
+saves/NEW WORLD/68765.json
+saves/NEW WORLD/68865.json
+saves/NEW WORLD/68965.json
+saves/NEW WORLD/69065.json
+saves/NEW WORLD/69165.json
+saves/NEW WORLD/69265.json
+saves/NEW WORLD/69365.json
+saves/NEW WORLD/69465.json
+saves/NEW WORLD/69565.json
+saves/NEW WORLD/69665.json
+saves/NEW WORLD/69765.json
+saves/NEW WORLD/69865.json
+saves/NEW WORLD/69965.json
+saves/NEW WORLD/70065.json
+saves/NEW WORLD/70165.json
+saves/NEW WORLD/70265.json
+saves/NEW WORLD/70365.json
+saves/NEW WORLD/70465.json
+saves/NEW WORLD/70565.json
+saves/NEW WORLD/70665.json
+saves/NEW WORLD/70765.json
+saves/NEW WORLD/70865.json
+saves/NEW WORLD/70965.json
+saves/NEW WORLD/71065.json
+saves/NEW WORLD/71165.json
+saves/NEW WORLD/71265.json
+saves/NEW WORLD/71365.json
+saves/NEW WORLD/71465.json
+saves/NEW WORLD/71565.json
+saves/NEW WORLD/71665.json
+saves/NEW WORLD/71765.json
+saves/NEW WORLD/71865.json
+saves/NEW WORLD/71965.json
+saves/NEW WORLD/72065.json
+saves/NEW WORLD/72165.json
+saves/NEW WORLD/72265.json
+saves/NEW WORLD/72365.json
+saves/NEW WORLD/72465.json
+saves/NEW WORLD/72565.json
+saves/NEW WORLD/72665.json
+saves/NEW WORLD/72765.json
+saves/NEW WORLD/72865.json
+saves/NEW WORLD/72965.json
+saves/NEW WORLD/73065.json
+saves/NEW WORLD/73165.json
+saves/NEW WORLD/73265.json
+saves/NEW WORLD/73365.json
+saves/NEW WORLD/73465.json
+saves/NEW WORLD/73565.json
+saves/NEW WORLD/73665.json
+saves/NEW WORLD/73765.json
+saves/NEW WORLD/73865.json
+saves/NEW WORLD/73965.json
+saves/NEW WORLD/74065.json
+saves/NEW WORLD/74165.json
+saves/NEW WORLD/74265.json
+saves/NEW WORLD/74365.json
+saves/NEW WORLD/74465.json
+saves/NEW WORLD/74565.json
+saves/NEW WORLD/74665.json
+saves/NEW WORLD/74765.json
+saves/NEW WORLD/74865.json
+saves/NEW WORLD/74965.json
+saves/NEW WORLD/75065.json
+saves/NEW WORLD/75165.json
+saves/NEW WORLD/75265.json
+saves/NEW WORLD/75365.json
+saves/NEW WORLD/75465.json
+saves/NEW WORLD/75565.json
+saves/NEW WORLD/75665.json
+saves/NEW WORLD/75765.json
+saves/NEW WORLD/75865.json
+saves/NEW WORLD/75965.json
+saves/NEW WORLD/76065.json
+saves/NEW WORLD/76165.json
+saves/NEW WORLD/76265.json
+saves/NEW WORLD/76365.json
+saves/NEW WORLD/76465.json
+saves/NEW WORLD/76565.json
+saves/NEW WORLD/76665.json
+saves/NEW WORLD/76765.json
+saves/NEW WORLD/76865.json
+saves/NEW WORLD/76965.json
+saves/NEW WORLD/77065.json
+saves/NEW WORLD/77165.json
+saves/NEW WORLD/77265.json
+saves/NEW WORLD/77365.json
+saves/NEW WORLD/77465.json
+saves/NEW WORLD/77565.json
+saves/NEW WORLD/77665.json
+saves/NEW WORLD/77672.json
