--- a/.gitignore
+++ b/.gitignore
@@ -2863,3 +2863,45 @@ saves/NEW WORLD/77565.json
 saves/NEW WORLD/77665.json
 saves/NEW WORLD/77672.json
 gauss.py
+output/saves/LAB/91826.json
+output/saves/LAB/92164.json
+output/saves/LAB/saves.json
+output/saves/LAB2/13500.json
+output/saves/LAB2/14000.json
+output/saves/LAB2/14500.json
+output/saves/LAB2/14506.json
+output/saves/LAB2/saves.json
+output/saves/NEW RULES/7129.json
+output/saves/NEW RULES/7137.json
+output/saves/NEW RULES/7237.json
+output/saves/NEW RULES/7298.json
+output/saves/creatures/AVDDPJ.json
+output/saves/creatures/FVVLSI.json
+output/saves/creatures/HFJZTE.json
+output/saves/creatures/IJRSTF.json
+output/saves/creatures/IPZAPF.json
+output/saves/creatures/LFHEBZ.json
+output/saves/creatures/LTPOKO.json
+output/saves/creatures/MSHEBZ.json
+output/saves/creatures/PLJZTE.json
+output/saves/creatures/QFMMNP.json
+output/saves/creatures/QKFEZU.json
+output/saves/creatures/SUXUZU.json
+output/saves/creatures/SZXJUK.json
+output/saves/creatures/VIIRXS.json
+lib/__pycache__/camera.cpython-39.pyc
+lib/__pycache__/species.cpython-39.pyc
+lib/__pycache__/camera.cpython-39.pyc
+lib/__pycache__/species.cpython-39.pyc
+output/saves/creatures/VIIRXS.json
+output/saves/NEW RULES/7129.json
+output/saves/NEW RULES/7137.json
+output/saves/NEW RULES/7237.json
+output/saves/NEW RULES/7298.json
+output/saves/NEW RULES/7129.json
+output/saves/NEW RULES/7137.json
+output/saves/NEW RULES/7237.json
+output/saves/NEW RULES/7298.json
+output/saves/creatures/VIIRXS.json
+lib/__pycache__/camera.cpython-39.pyc
+lib/__pycache__/species.cpython-39.pyc
