--- a/.gitignore
+++ b/.gitignore
@@ -2905,3 +2905,7 @@ output/saves/NEW RULES/7298.json
 output/saves/creatures/VIIRXS.json
 lib/__pycache__/camera.cpython-39.pyc
 lib/__pycache__/species.cpython-39.pyc
+lib/__pycache__/camera.cpython-39.pyc
+lib/__pycache__/species.cpython-39.pyc
+lib/__pycache__/camera.cpython-39.pyc
+lib/__pycache__/species.cpython-39.pyc
