--- a/.gitignore
+++ b/.gitignore
@@ -227,3 +227,5 @@ lib/__pycache__/species.cpython-39.pyc
 lib/__pycache__/camera.cpython-39.pyc
 lib/__pycache__/species.cpython-39.pyc
 main.html
+lib/__pycache__/camera.cpython-39.pyc
+.gitignore
