--- a/.gitignore
+++ b/.gitignore
@@ -232,3 +232,61 @@ lib/__pycache__/camera.cpython-39.pyc
 lib/__pycache__/sim_stat.cpython-310.pyc
 lib/__pycache__/spike.cpython-310.opt-1.pyc
 lib/__pycache__/spike.cpython-310.pyc
+lib/__pycache__/camera.cpython-39.pyc
+lib/__pycache__/net_draw.cpython-39.opt-1.pyc
+lib/__pycache__/species.cpython-39.pyc
+saves/M/55347.json
+saves/M/79466.json
+saves/M/91966.json
+saves/M/95466.json
+saves/M/98966.json
+saves/M/102466.json
+saves/M/105966.json
+saves/M/109466.json
+saves/M/112966.json
+saves/M/116466.json
+saves/M/119966.json
+saves/M/123466.json
+saves/M/126643.json
+saves/M/130143.json
+saves/M/133643.json
+saves/M/137143.json
+saves/M/140643.json
+saves/M/144143.json
+saves/M/147643.json
+saves/M/151143.json
+saves/M/154643.json
+saves/M/158143.json
+saves/M/158643.json
+saves/M/159143.json
+saves/M/159643.json
+saves/M/160143.json
+saves/M/160643.json
+saves/M/161143.json
+saves/M/161643.json
+saves/M/162143.json
+saves/M/162643.json
+saves/M/163143.json
+saves/M/163609.json
+saves/M/164109.json
+saves/M/164609.json
+saves/M/165109.json
+saves/M/165609.json
+saves/M/166109.json
+saves/M/166579.json
+saves/M/167079.json
+saves/M/167579.json
+saves/M/168079.json
+saves/M/168579.json
+saves/M/169079.json
+saves/M/169579.json
+saves/M/170079.json
+saves/M/170579.json
+saves/M/171079.json
+saves/M/171579.json
+saves/M/172079.json
+saves/M/config.json
+saves/M/saves.json
+lib/__pycache__/camera.cpython-39.pyc
+lib/__pycache__/species.cpython-39.pyc
+39516.json
