--- a/.gitignore
+++ b/.gitignore
@@ -290,3 +290,23 @@ saves/M/saves.json
 lib/__pycache__/camera.cpython-39.pyc
 lib/__pycache__/species.cpython-39.pyc
 39516.json
+.vcpkgbootstrap-vcpkg.bat
+git
+saves/M/209435.json
+saves/M/233684.json
+saves/M/258184.json
+saves/M/264684.json
+saves/M/268184.json
+saves/M/271684.json
+saves/M/275184.json
+saves/M/278684.json
+saves/M/282184.json
+saves/M/285684.json
+saves/M/289184.json
+saves/M/292684.json
+saves/M/296184.json
+saves/M/299684.json
+saves/M/303184.json
+saves/M/303684.json
+saves/M/304184.json
+saves/M/304684.json
